Remove additional space from name

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,7 @@
         <div class="row justify-content-between">
           <div class="col-6">
             <div class="head">
-              Servir
-              <span class="dot">.</span>me
+              Servir<span class="dot">.</span>me
             </div>
           </div>
         </div>
