--- a/src/index.html
+++ b/src/index.html
@@ -218,6 +218,9 @@
           © 2018 Servir.me
         </div>
         <div class="col-md-6 align-self-center text-center text-md-right my-2" id="social-media">
+          <a href="https://github.com/servirme" class="d-inline-block text-center ml-2" target="_blank">
+            <i class="fa fa-github" aria-hidden="true"></i>
+          </a>
           <a href="https://www.facebook.com/servir.me" class="d-inline-block text-center ml-2" target="_blank">
             <i class="fa fa-facebook" aria-hidden="true"></i>
           </a>
